--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <!-- Favicon Icon -->
 
         <!--[if lt IE 9]>
-            <script src="js/html5shiv.js"></script>
-            <script src="js/respond.min.js"></script>
+        <script src="js/html5shiv.js"></script>
+        <script src="js/respond.min.js"></script>
+
         <![endif]--> 
     </head>
     <body>
@@ -60,24 +61,21 @@
                                 </ul>
                             </li>
                             <li class="scroll"><a href="#team">Team</a></li>
-                            <li class="scroll has-child">
-                                <a href="#blog">Blog</a>
-                                <ul>
-                                    <li><a href="blog.html">Blog Listing</a></li>
-                                    <li><a href="singleblog.html">Single Blog</a></li>
-                                </ul>
-                            </li>
+<!--                            <li class="scroll has-child">-->
+<!--                                <a href="#blog">Blog</a>-->
+<!--                                <ul>-->
+<!--                                    <li><a href="blog.html">Blog Listing</a></li>-->
+<!--                                    <li><a href="singleblog.html">Single Blog</a></li>-->
+<!--                                </ul>-->
+<!--                            </li>-->
                             <li class="scroll"><a href="#contact">Contact</a></li>
                         </ul>
                     </nav>
                     <div class="clearfix"></div>
                     <div class="headerSocial">
-                        <a class="fac" href="#"><i class="fa fa-facebook"></i></a>
+                        <a class="fac" href="https://www.facebook.com/vanntechs"><i class="fa fa-facebook"></i></a>
                         <a class="ins" href="#"><i class="fa fa-instagram"></i></a>
-                        <a class="lin" href="#"><i class="fa fa-linkedin"></i></a>
-                        <a class="goo" href="#"><i class="fa fa-google-plus"></i></a>
                         <a class="twi" href="#"><i class="fa fa-twitter"></i></a>
-                        <a class="dri" href="#"><i class="fa fa-dribbble"></i></a>
                     </div>
                 </div>
                 <div class="container">
@@ -108,13 +106,13 @@
                                         </ul>
                                     </li>
                                     <li class="scroll"><a href="#team">Team</a></li>
-                                    <li class="scroll has-child">
-                                        <a href="#blog">Blog</a>
-                                        <ul>
-                                            <li><a href="blog.html">Blog Listing</a></li>
-                                            <li><a href="singleblog.html">Single Blog</a></li>
-                                        </ul>
-                                    </li>
+<!--                                    <li class="scroll has-child">-->
+<!--                                        <a href="#blog">Blog</a>-->
+<!--                                        <ul>-->
+<!--                                            <li><a href="blog.html">Blog Listing</a></li>-->
+<!--                                            <li><a href="singleblog.html">Single Blog</a></li>-->
+<!--                                        </ul>-->
+<!--                                    </li>-->
                                     <li class="scroll"><a href="#contact">Contact</a></li>
                                 </ul>
                                 <div class="menuButtons">
@@ -2519,21 +2517,21 @@
 <!--                    </div>-->
 <!--                </div>-->
 <!--            </section>-->
-            <section class="comonSection subscriptionSection">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2 text-center">
-                            <h5 class="sectionTitle2">Stay upto date, join our newsletter</h5>
-                            <form id="subscriptionsforms" method="post" action="#" class="subscribeForm subscribeForm2">
-                                <input id="sub_email" type="email" name="subs" placeholder="ENTER YOUR EMAIL."/>
-                                <button id="subs_submit" type="submit">Lets Talk</button>
-                                <div class="clearfix"></div>
-                                <p>We do not share your information with anyone.</p>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </section>
+<!--            <section class="comonSection subscriptionSection">-->
+<!--                <div class="container">-->
+<!--                    <div class="row">-->
+<!--                        <div class="col-lg-8 col-lg-offset-2 text-center">-->
+<!--                            <h5 class="sectionTitle2">Stay up to date, join our newsletter</h5>-->
+<!--                            <form id="subscriptionsforms" method="post" action="#" class="subscribeForm subscribeForm2">-->
+<!--                                <input id="sub_email" type="email" name="subs" placeholder="ENTER YOUR EMAIL."/>-->
+<!--                                <button id="subs_submit" type="submit">Lets Talk</button>-->
+<!--                                <div class="clearfix"></div>-->
+<!--                                <p>We do not share your information with anyone.</p>-->
+<!--                            </form>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </section>-->
             <section class="comonSection contactSection2" id="contact">
                 <div class="container">
                     <div class="row">
@@ -2547,16 +2545,16 @@
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
                             <div class="conInfos2">
-                                <p class="pfirst"><i class="fa fa-phone"></i>1.800.321.4567-8</p>
-                                <p class="pMid"><i class="fa fa-envelope-o"></i>support@dotsquare.com</p>
-                                <p class="plast"><i class="fa fa-map-marker"></i>Some street, New York, USA</p>
+                                <p class="pfirst"><i class="fa fa-phone"></i>514-552-3180</p>
+                                <p class="pMid"><i class="fa fa-envelope-o"></i>vannessa@vanntechs.com</p>
+                                <p class="plast"><i class="fa fa-map-marker"></i>7760 Av. Naples, Brosssard, Quebec, Canada.</p>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-10 col-lg-offset-1">
                             <div class="row">
-                                <form class="conForms conforms2" method="post" action="#" id="contactForm">
+                                <form class="conForms conforms2" method="post" action="mailto:vannessa@vanntechs.com" id="contactForm">
                                     <div class="col-lg-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
                                         <input type="text" name="con_name" id="con_name" class="inputa required" placeholder="NAME:"/>
                                         <input type="email" name="con_email" id="con_email" class="inputa required" placeholder="EMAIL:"/>
@@ -2566,7 +2564,7 @@
                                         <textarea class="texputa required" id="con_message" name="con_message" placeholder="MESSAGE:"></textarea>
                                     </div>
                                     <div class="col-lg-12 text-right wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
-                                        <button type="submit" class="submita" id="con_submit">Send Message</button>
+                                        <button type="submit" class="submita" id="con_submit" onclick="return sendMail()">Send Message</button>
                                     </div>
                                 </form>
                             </div>
@@ -2579,17 +2577,15 @@
                     <div class="row">
                         <div class="col-lg-9 wow zoomIn" data-wow-duration="700ms" data-wow-delay="300ms">
                             <div class="copyRight">
-                                &copy; Vanntechs Web Studio. All Rights Reserved.
+                                &copy; Vanntechs Web Studio 2023. All Rights Reserved.
                             </div>
                         </div>
                         <div class="col-lg-3 wow zoomIn" data-wow-duration="700ms" data-wow-delay="300ms">
                             <div class="footerSocial">
-                                <a class="fac" href="#"><i class="fa fa-facebook"></i></a>
+                                <a class="fac" href="https://www.facebook.com/vanntechs"><i class="fa fa-facebook"></i></a>
                                 <a class="ins" href="#"><i class="fa fa-instagram"></i></a>
-                                <a class="lin" href="#"><i class="fa fa-linkedin"></i></a>
-                                <a class="goo" href="#"><i class="fa fa-google-plus"></i></a>
                                 <a class="twi" href="#"><i class="fa fa-twitter"></i></a>
-                                <a class="dri" href="#"><i class="fa fa-dribbble"></i></a>
+
                             </div>
                         </div>
                     </div>
@@ -2628,5 +2624,14 @@
         <script type="text/javascript" src="js/jquery.themepunch.tools.min.js"></script>
         <script type="text/javascript" src="js/jquery.themepunch.revolution.min.js"></script>
         <script type="text/javascript" src="js/theme.js"></script>
+        <script type="text/javascript"
+                src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+        </script>
+        <script type="text/javascript">
+            (function(){
+                emailjs.init("DWaxkU3M_Bh4KWQBW");
+            })();
+        </script>
+        <script src="js/index.js"></script>
     </body>
 </html>
