--- a/singlefolio.html
+++ b/singlefolio.html
@@ -24,7 +24,7 @@
         <!-- End Include All CSS -->
 
         <!-- Favicon Icon -->
-        <link rel="icon"  type="image/png" href="images/favicons.png">
+        <link rel="icon"  type="image/png" href="images/vanntechs-icon.png">
         <!-- Favicon Icon -->
 
         <!--[if lt IE 9]>
@@ -35,7 +35,7 @@
     <body>
         <!-- Loader -->
         <div class="preloader">
-            <img src="images/spinningwheel.gif" alt=""/>
+            <img src="images/vanntechs-spinner.gif" alt=""/>
         </div>
         <!-- Loader -->
         <div id="page" class="animat">
