--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-sm-3">
                             <div class="logo">
-                                <a href="index.html"><img class="logo" src="images/vanntechs-logo%20copy.webp" alt="Vanntechs Web Studio Logo"></a>
+                                <a href="index.html"><img class="logo" src="images/vanntechs-logo.webp" alt="Vanntechs Web Studio Logo"></a>
                             </div>
                         </div>
                         <div class="col-lg-9 col-sm-9 horizontalmenu">
