--- a/index.html
+++ b/index.html
@@ -367,14 +367,14 @@
     <section class="comonSection funfacts2 ffSection" id="our-packages">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-sm-4 text-left wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
+                <div class="col-lg-6 col-sm-6 text-left wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
                     <h2 class="sectionTitle2">
                         <small>Our Packages</small>
                         Design. And. Develop.
                     </h2>
-                    <img src="images/vanntechs-web-studio-our-packages.webp">
+                    <img class="center" src="images/vanntechs-web-studio-our-packages.webp">
                 </div>
-                <div class="col-lg-4 col-sm-4 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="350ms">
+                <div class="col-lg-6 col-sm-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="350ms">
                     <div class="counters counters2 text-center">
                         <i class="esen-Shop"></i>
                         <h2>Package 1: Landing Page</h2>
@@ -403,7 +403,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-4 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="400ms">
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-sm-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="400ms">
                     <div class="counters counters2 text-center">
                         <i class="esen-Shop"></i>
                         <h2>Package 2: Vanntechs Plus</h2>
@@ -438,7 +440,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-4 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="450ms">
+                <div class="col-lg-6 col-sm-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="450ms">
                     <div class="counters counters2 text-center">
                         <i class="esen-Shop"></i>
                         <h2>Package 3: Vanntechs Pro</h2>
@@ -470,7 +472,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-4 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="450ms">
+            </div>
+            <div class="row">
+                <div class="col-lg-6 col-sm-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="450ms">
                     <div class="counters counters2 text-center">
                         <i class="esen-Shop"></i>
                         <h2>Package 4: E-Commerce</h2>
@@ -495,13 +499,12 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-4 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="450ms">
+                <div class="col-lg-6 col-sm-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="450ms">
                     <div class="counters counters2 text-center">
                         <i class="esen-Shop"></i>
                         <h2>Bug Fixing Service</h2>
                         <h4>Starting at 109$/hour</h4>
                         <span>------------------------------------</span>
-                        <p>Having issues with your website and need us to fix it? Contact us to discuss more!</p><br>
                         <ul class="package-list">
                             <li>
                                 <p>Bug Identification and Analysis</p>
@@ -530,6 +533,8 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-12 col-sm-12 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="450ms">
                     <div class="counters counters2 text-center notfoundparagraph">
                         <i class="esen-Email"></i>
@@ -539,7 +544,6 @@
                                  alt="Vanntechs Web Studio Contact Image">
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -952,9 +956,6 @@
                 <div class="col-lg-3 wow zoomIn" data-wow-duration="700ms" data-wow-delay="300ms">
                     <div class="footerSocial">
                         <a class="fac" href="https://www.facebook.com/vanntechs"><i class="fa fa-facebook"></i></a>
-                        <a class="ins" href="#"><i class="fa fa-instagram"></i></a>
-                        <a class="twi" href="#"><i class="fa fa-twitter"></i></a>
-
                     </div>
                 </div>
             </div>
