--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                 </div>
                 <div class="row wel2Row">
                     <div class="col-lg-12 text-center wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
-                        <a href="#projects" class="learnMoreButton2">
+                        <a href="#projects" class="scrolls learnMoreButton2">
                             See our works
                         </a>
                     </div>
@@ -539,7 +539,7 @@
                     <div class="counters counters2 text-center notfoundparagraph">
                         <i class="esen-Email"></i>
                         <h2>Not found what you are looking for?</h2>
-                        <h4><a href="#contact">Contact us</a> to get a personalized package that suits your need!</h4>
+                        <h4><a class="scrolls" href="#contact">Contact us</a> to get a personalized package that suits your need!</h4>
                         <br><img class="vanntechscontactimage" src="images/vanntechs-web-studio-contact-us.webp"
                                  alt="Vanntechs Web Studio Contact Image">
                     </div>
@@ -555,7 +555,6 @@
                         <small>Why choose Vanntechs Web Studio ?</small>
                         We listen. We discuss. We advise.
                     </h2>
-
                     <div class="bootsTab">
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane fade in active" id="expertise-tab">
@@ -746,7 +745,7 @@
                         <h5>Give us a chance to work with you</h5>
                         <h1>Interested?</h1>
                         <h3 class="white">Let Vanntechs knows about your project!</h3>
-                        <a href="#contact" class="vanntechsButton">Lets Talk</a>
+                        <a href="#contact" class="scrolls vanntechsButton">Lets Talk</a>
                     </div>
                 </div>
             </div>
