Update address and phone

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Vanntechs Web Studio Montreal | Montreal Website Agency</title>
+    <title>Vanntechs Web Studio Calgary | Calgary Website Agency</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-          content="Vanntechs Web Studio specializes in:  web design Quebec, web development and maintenance Montreal, Canada.">
+          content="Vanntechs Web Studio specializes in:  web design Alberta, web development and maintenance Calgary, Canada.">
     <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
     <link rel="canonical" href="https://vanntechs.com/"/>
     <meta name="DC.title" content="Vanntechs">
     <meta name="geo.region" content="CA">
-    <meta name="geo.placename" content="Montreal">
+    <meta name="geo.placename" content="Calgary">
     <meta name="geo.position" content="0;0">
 
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Montreal Web Studio | Web Design Agency"/>
+    <meta property="og:title" content="Calgary Web Studio | Web Design Agency"/>
     <meta property="og:description"
-          content="Creative and passionate web design and branding: web studio based in Montreal, Quebec, Canada. Call us at 514-552-3180"/>
+          content="Creative and passionate web design and branding: web studio based in Calgary, Alberta, Canada."/>
     <meta property="og:url" content="https://vanntechs.com/"/>
     <meta property="og:site_name" content="Vanntechs Web Studio"/>
     <meta property="og:image" content="images/vanntechs-web-studio-opengraph.webp"/>
@@ -54,11 +54,11 @@
         "name": "Vanntechs Web Studio",
         "image": "https://vanntechs.com/images/vanntechs-logo.webp",
         "url": "https://vanntechs.com",
-        "telephone": "+1-514-552-3180",
+        "telephone": "",
         "address": {
             "@type": "PostalAddress",
-            "addressLocality": "Montreal",
-            "addressRegion": "Quebec",
+            "addressLocality": "Calgary",
+            "addressRegion": "Alberta",
             "addressCountry": "Canada"
         },
         "openingHours": [
@@ -76,7 +76,7 @@
         "contactPoint": [
             {
                 "@type": "ContactPoint",
-                "telephone": "+1-514-552-3180",
+                "telephone": "+1-403-879-1127",
                 "contactType": "sales"
             }
         ],
@@ -116,7 +116,7 @@
         "@context": "http://schema.org",
         "@type": "WebSite",
         "name": "Vanntechs Web Studio",
-        "alternateName": "Montreal Web Design and Development Studio",
+        "alternateName": "Calgary Web Design and Development Studio",
         "url": "https://vanntechs.com"
     }
 </script>
@@ -211,7 +211,7 @@
                              data-start="1200"
                              data-easing="Power4.easeOut">
                             <div class="slid2s">
-                                <h2>Montreal, Quebec Canada</h2>
+                                <h2>Calgary, Alberta Canada</h2>
                             </div>
                         </div>
                         <div class="tp-caption sfb text-right homeOneSlider"
@@ -309,7 +309,7 @@
                     <p class="subTitle wow fadeInUp" data-wow-duration="700ms" data-wow-delay="350ms">
                         We design a productive, appealing and user-friendly complying with accessibility WCAG 2
                         checklist
-                        for your business from our website design studio in Montreal, Quebec Canada.
+                        for your business from our website design studio in Calgary, Alberta Canada.
                     </p>
                     <div class="row">
                         <div class="col-lg-6 col-sm-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
@@ -572,12 +572,12 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
                     <div class="conInfos2">
-                        <a href="tel:514-552-3180"><p class="pfirst"><i class="fa fa-phone"></i>
-                            514-552-3180</p></a>
+                        <a href="tel:403-879-1127"><p class="pfirst"><i class="fa fa-phone"></i>
+                            403-879-1127</p></a>
                         <a href="mailto:vannessa@vanntechs.com"><p class="pMid"><i class="fa fa-envelope-o"></i>vannessa@vanntechs.com
                         </p></a>
                         <a href="https://goo.gl/maps/tA8TbxCrx2o31r8y5"><p class="plast"><i
-                                class="fa fa-map-marker"></i>7760 Av. Naples, Brosssard, Quebec, Canada.</p></a>
+                                class="fa fa-map-marker"></i>150 Hawkstone Drive NW, Calgary, AB, Canada.</p></a>
                     </div>
                 </div>
             </div>
@@ -617,7 +617,7 @@
 <!--                <div class="col-lg-12 text-center wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">-->
 <!--                    <h2 class="sectionTitle2">-->
 <!--                        <small>Introducing</small>-->
-<!--                        VANNTECHS WEB STUDIO MONTREAL-->
+<!--                        VANNTECHS WEB STUDIO CALGARY-->
 <!--                    </h2>-->
 <!--                </div>-->
 <!--            </div>-->
@@ -681,7 +681,7 @@
                                     <i class="esen-Conversation"></i>
                                     <h2>Vanntechs Web Studio helps you to make your online presence better</h2>
                                     <p>
-                                        Vanntechs Web Studio is a full-service Montreal, Quebec web design and web development company.
+                                        Vanntechs Web Studio is a full-service Calgary, Alberta web design and web development company.
                                         We specialize in building modern, optimized websites using HTML, CSS, Javascript, Jekyll and
                                         WordPress.
                                         With over 10 years of experience doing web development, our team members will be
@@ -874,7 +874,7 @@
     <section class="comonSection gallery">
         <div class="galImg">
             <img src="images/gallery/vanntechs-web-studio-montreal-background-photo.webp"
-                 alt="Vanntechs Web Studio montreal city background photo"/>
+                 alt="Vanntechs Web Studio city background photo"/>
         </div>
     </section>
     <div class="clearfix"></div>
