Fix background images

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="tp-banner1">
                 <ul>
                     <li data-transition="slotzoom-horizontal" data-slotamount="7" data-masterspeed="300">
-                        <img src="images/gallery/vanntechs-web-studio-calgary-background-photo.webp"
+                        <img src="images/bg/16.webp"
                              alt="Vanntechs Web Studio Slide 1 Background" data-bgfit="cover"
                              data-bgposition="center center" data-bgrepeat="no-repeat">
                         <div class="tp-caption sfb text-right homeOneSlider"
@@ -572,43 +572,43 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
                     <div class="conInfos2">
-                        <a href="tel:403-879-1127"><p class="pfirst"><i class="fa fa-phone"></i>
-                            403-879-1127</p></a>
-                        <a href="mailto:vannessa@vanntechs.com"><p class="pMid"><i class="fa fa-envelope-o"></i>vannessa@vanntechs.com
+                        <a href="tel:514-557-1071"><p class="pfirst"><i class="fa fa-phone"></i>
+                            514-557-1071</p></a>
+                        <a href="mailto:thytran142@icloud.com"><p class="pMid"><i class="fa fa-envelope-o"></i>thytran142@icloud.com
                         </p></a>
                         <a href="https://goo.gl/maps/tA8TbxCrx2o31r8y5"><p class="plast"><i
                                 class="fa fa-map-marker"></i>150 Hawkstone Drive NW, Calgary, AB, Canada.</p></a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <div class="row">
-                        <form class="conForms conforms2" id="contactForm">
-                            <div class="col-lg-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">
-                                <input type="text" name="con_name" id="con_name" class="inputa required"
-                                       placeholder="NAME*:" required/>
-                                <input type="email" name="con_email" id="con_email" class="inputa required"
-                                       placeholder="EMAIL*:" required/>
-                                <input type="text" name="con_phone" id="con_phone" class="inputa required"
-                                       placeholder="PHONE*:" required/>
-                            </div>
-                            <div class="col-lg-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="350ms">
-                                <textarea class="texputa required" id="con_message" name="con_message"
-                                          placeholder="Tell us about your project!" required></textarea>
-                            </div>
-                            <div class="col-lg-12 text-right wow fadeInUp" data-wow-duration="700ms"
-                                 data-wow-delay="300ms">
-                                <button class="g-recaptcha submita"
-                                        data-sitekey="6LdMh2InAAAAANrw2iTYzHsMD0zsm7EtMQRcgTBC"
-                                        data-callback='sendMail'
-                                        data-action='submit'>Send Message
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="row">-->
+<!--                <div class="col-lg-10 col-lg-offset-1">-->
+<!--                    <div class="row">-->
+<!--                        <form class="conForms conforms2" id="contactForm">-->
+<!--                            <div class="col-lg-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="300ms">-->
+<!--                                <input type="text" name="con_name" id="con_name" class="inputa required"-->
+<!--                                       placeholder="NAME*:" required/>-->
+<!--                                <input type="email" name="con_email" id="con_email" class="inputa required"-->
+<!--                                       placeholder="EMAIL*:" required/>-->
+<!--                                <input type="text" name="con_phone" id="con_phone" class="inputa required"-->
+<!--                                       placeholder="PHONE*:" required/>-->
+<!--                            </div>-->
+<!--                            <div class="col-lg-6 wow fadeInUp" data-wow-duration="700ms" data-wow-delay="350ms">-->
+<!--                                <textarea class="texputa required" id="con_message" name="con_message"-->
+<!--                                          placeholder="Tell us about your project!" required></textarea>-->
+<!--                            </div>-->
+<!--                            <div class="col-lg-12 text-right wow fadeInUp" data-wow-duration="700ms"-->
+<!--                                 data-wow-delay="300ms">-->
+<!--                                <button class="g-recaptcha submita"-->
+<!--                                        data-sitekey="6LdMh2InAAAAANrw2iTYzHsMD0zsm7EtMQRcgTBC"-->
+<!--                                        data-callback='sendMail'-->
+<!--                                        data-action='submit'>Send Message-->
+<!--                                </button>-->
+<!--                            </div>-->
+<!--                        </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </section>
 <!--    <section class="comonSection welcome2" id="team">-->
@@ -871,12 +871,12 @@
             </div>
         </div>
     </section>
-    <section class="comonSection gallery">
-        <div class="galImg">
-            <img src="images/gallery/vanntechs-web-studio-calgary-background-photo.webp"
-                 alt="Vanntechs Web Studio city background photo"/>
-        </div>
-    </section>
+<!--    <section class="comonSection gallery">-->
+<!--        <div class="galImg">-->
+<!--            <img src="images/bg/16.webp"-->
+<!--                 alt="Vanntechs Web Studio city background photo"/>-->
+<!--        </div>-->
+<!--    </section>-->
     <div class="clearfix"></div>
     <section class="comonSection testimonial2">
         <div class="container">
@@ -1022,7 +1022,7 @@
             <div class="row">
                 <div class="col-lg-9 wow zoomIn" data-wow-duration="700ms" data-wow-delay="300ms">
                     <div class="copyRight">
-                        &copy; Vanntechs Web Studio 2023. All Rights Reserved.
+                        &copy; Vanntechs Web Studio 2024. All Rights Reserved.
                     </div>
                 </div>
                 <div class="col-lg-3 wow zoomIn" data-wow-duration="700ms" data-wow-delay="300ms">
