--- a/index.html
+++ b/index.html
@@ -576,8 +576,8 @@
                             514-557-1071</p></a>
                         <a href="mailto:thytran142@icloud.com"><p class="pMid"><i class="fa fa-envelope-o"></i>thytran142@icloud.com
                         </p></a>
-                        <a href="https://goo.gl/maps/tA8TbxCrx2o31r8y5"><p class="plast"><i
-                                class="fa fa-map-marker"></i>150 Hawkstone Drive NW, Calgary, AB, Canada.</p></a>
+<!--                         <a href="https://goo.gl/maps/tA8TbxCrx2o31r8y5"><p class="plast"><i
+                                class="fa fa-map-marker"></i>150 Hawkstone Drive NW, Calgary, AB, Canada.</p></a> -->
                     </div>
                 </div>
             </div>
